--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <h1>KRISHNA CREATIONS</h1>
 <h2>Welcome to Krishna Creations</h2>  
 <h3>Fashion Identity for Women and Kids</h3>  
-<h0>THIS IS MY TEST web PAGE </h0>
+<h0>THIS IS MY TEST PAGE </h0>
 <ul>  
   <li><a href="#">Home</a></li>  
   <li><a href="#">News</a></li>  
